webroot/css/mobile.css
/* ========== Tag Classes Start ========== */
body, table, div
{
	font-size: 1em;
	font-family: "Trebuchet MS",arial,sans-serif;
	background-color: #fff;
	color: #000;
}

body, table
{
	text-align: left;
}

h1
{
	font-size: 130%;
	white-space: nowrap;
	text-align: center;
	color: #000;
}

a
{
	color: blue;
	text-decoration: none;
}

a:hover
{
	text-decoration: underline;
}

input.button, input.submit
{
	border-style: none;
	background-color: #fff;
	color: blue;
	text-decoration: underline;
	margin: 0px 0px 0px 0px;
	padding: 0px 0px 2px 0px;
}

input.number
{
	-wap-input-format: '*N';
}
/* ========== Tag Classes End ========== */

/* ========== mPoint Classes Start ========== */
.mPoint_Label
{
	font-weight: bold;
	padding-right: 0.5em;
	padding-top: 0.3em;
	white-space: nowrap;
}

.mPoint_Info
{
	font-weight: normal;
	font-style: italic;
	color: #000;
	text-align: left;
	padding: 0px;
	margin: 0px;	
}

.mPoint_Status
{
	color: red;
	font-style: italic;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
}

td.mPoint_Number
{
	padding-right: 0.5em;
	text-align: right;
	vertical-align: bottom;
}
/* ========== mPoint Classes Start ========== */

/* ========== ID Classes Start ========== */
table#products tr td
{
	padding-left: 0.1em;
}

table#receipt
{
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}

div#logo, div#progress, div#mPoint, div#status
{
	text-align: center;
}

div#status table tr td
{
	vertical-align: middle;
	padding-left: 0.5em;
}
/* ========== ID Classes End ========== */

